# SlicerSALT

./: .gitignore  .readthedocs.yaml  BUILD.md  BUNDLED_EXTENSIONS.md  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  LICENSE  README.md  TESTING.md
Applications/: CMakeLists.txt
Applications/App/: CMakeLists.txt  Main.cxx  qAppAboutDialog.cxx  qAppAboutDialog.h  qAppMainWindow.cxx  qAppMainWindow.h  qAppMainWindow_p.h  qSlicerAppAboutDialog.cxx  qSlicerAppAboutDialog.h  qSlicerAppExport.h.in  qSlicerAppMainWindow.cxx  qSlicerAppMainWindow.h  qSlicerAppMainWindowCore.cxx  qSlicerAppMainWindowCore.h  qSlicerAppMainWindowCore_p.h
Applications/App/Resources/: App.qrc
Applications/App/Resources/Icons/Large/: DesktopIcon.icns
Applications/App/Resources/Icons/Medium/: App.icns  DesktopIcon.icns
Applications/App/Resources/Icons/Small/: DesktopIcon.icns
Applications/App/Resources/Icons/XLarge/: DesktopIcon.icns
Applications/App/Resources/Settings/: DefaultSettings.ini
Applications/App/Resources/UI/: qSlicerAppAboutDialog.ui  qSlicerAppMainWindow.ui
Applications/App/Widgets/: qAppStyle.cxx  qAppStyle.h
Applications/SlicerSALTApp/: CMakeLists.txt  Main.cxx  qAppAboutDialog.cxx  qAppAboutDialog.h  qSlicerSALTAppMainWindow.cxx  qSlicerSALTAppMainWindow.h  qSlicerSALTAppMainWindow_p.h  slicer-application-properties.cmake
Applications/SlicerSALTApp/Resources/: App.qrc
Applications/SlicerSALTApp/Resources/Settings/: DefaultSettings.ini
Applications/SlicerSALTApp/Resources/UI/: qAppAboutDialog.ui
Applications/SlicerSALTApp/Widgets/: qAppAboutDialog.cxx  qAppAboutDialog.h  qAppStyle.cxx  qAppStyle.h
CMake/: ApplicationConfig.cmake.in  CMakeLists.txt  CheckExternalProjectDependency.cmake  ConfigureFileMultipleTimes.cmake  DashboardDriver.cmake  DashboardTemplate.cmake  EmptyExternalProject.cmake  ExportLibrary.cmake  ExternalProjectDependency.cmake  External_Application.cmake.in  External_ApplicationLibs.cmake.in  ExtractRepositoryInfo.cmake  FindGit.cmake  OSXVariables.cmake  QExport.h.in  SimpleTest.cmake  TEMPLATE.DashboardScript.cmake  UseApplication.cmake.in  qSlicerAppVersionConfigure.h.in
CMake/Superbuild/: CMakeLists.txt  External_Ninja.cmake  External_NinjaLibs.cmake  External_SPHARM-PDM.cmake  External_ShapePopulationViewer.cmake  External_ShapeRegressionExtension.cmake  External_Slicer.cmake  External_SlicerPackageExtensions.cmake  External_SlicerSALT.cmake
Docs/: CovarianceTesting.md  DentalModelSeg.md  GROUPS.md  Regression.md  SPHARM-PDM.md  SVA.md  Srep.md  build.md  conf.py  index.md  modules.md  requirements.in  requirements.txt
Docs/modules/: CovarianceTesting.md  DentalModelSeg.md  DifferenceStatistics.md  GROUPS.md  RegistrationBasedCorrespondence.md  Regression.md  SPHARM-PDM.md  SVA.md  Srep.md  SurfaceLearner.md  SurfaceLearnerToBeDeleted.md  SurfacePlaneMapper.md  module1.md  module2.md
Libs/: CMakeLists.txt
Modules/: CMakeLists.txt
Modules/CLI/: CMakeLists.txt
Modules/Loadable/: CMakeLists.txt
Modules/Scripted/: CMakeLists.txt
Modules/Scripted/Home/: CMakeLists.txt  Home.py
Modules/Scripted/Home/Resources/SampleDataDescription/: CrownSegmentation.json  DataImporterInputData.json  DifferenceStatisticsInputData.json  MFSDAInputData.json  RegistrationBasedCorrespondence.json  SPHARM-PDMFiducials.json  SPHARM-PDMTestData.json  SRepCreatorData.json  SRepHypothesisTestingData.json  SRepInitializerData.json  SVAInputData.json  ShapeRegressionInputData.json  SlicerDWDInputData.json
Modules/Scripted/ShapeAnalysisToolBox/: CMakeLists.txt  DataImporter.py
Modules/Scripted/ShapeAnalysisToolBox/CommonUtilities/: __init__.py  utility.py
Modules/Scripted/ShapeAnalysisToolBox/Resources/: DataImporter.ui
SuperBuild/: External_ModelToModelDistance.cmake  External_SPHARM-PDM.cmake  External_ShapePopulationViewer.cmake  External_ShapeRegressionExtension.cmake  External_python-ShapeVariationAnalyzer-requirements.cmake  External_python-cython.cmake  External_python-mfsda-requirements.cmake  External_python-pandas.cmake  External_python-scipy.cmake  External_python-statsmodels.cmake  External_shape4D.cmake  SlicerPackageExtensions.cmake  mfsda-requirements.txt
Utilities/Qt/: Resources.qrc
